# StateMachine

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: c-cpp.yml  ci.yml  doc.yml  work.yml
src/: CMakeLists.txt  Makefile  statemachine.c  statemachine.h
test/: CMakeLists.txt  Makefile  mocks.cpp  mocks.h  test.c  test.cpp
